--- a/style.css
+++ b/style.css
@@ -1,84 +1,111 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: url("./assets/images/istockphoto-1125908844-1024x1024.jpg");
-    color: #333;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: url("./assets/images/istockphoto-1125908844-1024x1024.jpg");
+  color: #333;
 }
 .header {
-    /* background: linear-gradient(#e66465, #9198e5);  ;
+  /* background: linear-gradient(#e66465, #9198e5);  ;
     height: 20vh;
     display: flex;
     align-items: center; */
-    background-color: #005f73;
-            color: white;
-            padding: 15px;
-            text-align: center;
+  background-color: #005f73;
+  color: white;
+  padding: 15px;
+  text-align: center;
 }
 .navbar a {
-    color: #ffdd57; /* Golden accent */
-    text-decoration: none;
+  color: #ffdd57; /* Golden accent */
+  text-decoration: none;
 }
 
 .title1 {
-    position: relative;
-    font-size: 20px;
-    left: 10px;
+  position: relative;
+  font-size: 20px;
+  left: 10px;
 }
 
 .navbar {
-    display: flex;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    flex-direction: column;
-    border:solid 1px chartreuse;
-    border-radius: 5px;
-    background-color: aquamarine;
-    padding: 5px;
+  display: flex;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  flex-direction: column;
+  border: solid 1px chartreuse;
+  border-radius: 5px;
+  background-color: aquamarine;
+  padding: 5px;
 }
 
 .hero {
-padding: 20px;
-height: auto;
-width: 80vw;
-background-color: white;
-align-self: center;
-justify-self: center;
+  padding: 20px;
+  height: auto;
+  width: 80vw;
+  background-color: white;
+  align-self: center;
+  justify-self: center;
 }
 h1 {
-    justify-self: center;
-    background-color: white;
+  justify-self: center;
+  background-color: white;
 }
 .hero video {
-    height: 67%;
-    max-height: 100%;
-    border-radius: 10px;
+  height: 67%;
+  max-height: 100%;
+  border-radius: 10px;
 }
 .products {
-    height: 40vw;
-    width: 65%;
-    padding: 5%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 20px;
-    
+  height: 67vh;
+  width: 80%;
+  padding: 10%;
+  padding: 5%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+  justify-self: center;
 }
 .products div {
-    height: 50%;
-        width: 30%;
-        border: solid 2px green;
-    
-
+  height: 250px;
+  width: 200px;
+  border: solid 2px green;
+  background-color: white;
 }
 
-a{
-    border: purple solid 2px;
+a {
+  border: purple solid 2px;
 }
 svg {
-    height: 200px;
-    width: 200px;
-    border:  red solid 2px;
+  height: 200px;
+  width: 200px;
+  border: red solid 2px;
+}
 
+.product1 {
+  display: flex;
+  flex-direction: column;
+}
+.photo-site {
+    font-size: 20px;
+}
+.product2 {
+    display: flex;
+    flex-direction: column;
+}
+.product3 {
+    display: flex;
+    flex-direction: column;
+}
+.product4 {
+    display: flex;
+    flex-direction: column;
+}
+.product5 {
+    display: flex;
+    flex-direction: column;
+}
+.product6 {
+    display: flex;
+    flex-direction: column;
 }
