--- a/style2.css
+++ b/style2.css
@@ -1,75 +1,272 @@
 * {
-    border: solid red 2px;
+  border: solid red 2px;
 }
 body {
-    margin: 0px;
-    padding: 0px;
-    background-color: rgb(94, 179, 94);
+  margin: 0px;
+  padding: 0px;
+  background-image: url("./assets/images/aerial-view-plains-fields.jpg");
 }
 .banner-wrapper {
-    width: 100%;
+  width: 100%;
+  max-height: 20vh;
 }
 .banner-box {
-    background: rgb(157, 220, 239);
-    display: flex;
-    flex-direction: row;
-    width:100%;
+  background: #8ccce2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  height: 10vh;
+}
+.banner-svg-name {
+  display: flex;
+  width: 20%;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .banner-svg {
-    height: 10vmin;
-    width: 10vmin;
-    width: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  height: 20vh;
+  width: 19vw;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.banner-svg svg {
+  width: 19vh;
+}
+.banner-name {
+  height: 10vh;
+  font-size: 1em;
 }
 .banner-search-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  border-left: black;
 }
 
 .banner-search-bar input {
-    width: 80%;
-    font-size: 1.4rem;
-    border-radius: 5px;
+  width: 80%;
+  font-size: 1.2rem;
+  border-radius: 5px;
 }
 .banner-info {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 15vw;
+  height: 100%;
+  border-color: black;
+  margin: 0px;
 }
 .banner-phone {
+  display: flex;
+  height: 50%;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  border-color: aquamarine;
+}
+.banner-info div p {
+  margin: 2%;
 }
 .banner-email {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  height: 50%;
 }
 
 .navbar-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  position: fixed;
+  right: 5px;
+  top:22vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  background-color: #caa86b;
+  border-radius: 10px;
 }
+.navbar-box div {
+  width: 120px;
+  text-align: center;
+}
+
 .navbar-jump {
-    padding-left: 5vw;
 }
 .navbar-video {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero-box {
+  display: flex;
+  border-color: black;
+  position: relative;
 }
 section div video {
-    width: 90%;
-    padding-left: 5%;
+  width: 90%;
+  padding-left: 5%;
+  border-color: blue;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.hero-text-box {
+  position: absolute;
+  top: 10px;
+  width: 100vw;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-color: blueviolet;
 }
 .hero-text {
+  width: 70vw;
+  font-size: 24px;
+}
+.products-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.products-box {
+    padding-top: 10vh;
+  display: grid;
+  width: 90vw;
+  height: 90vh;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+    "item1 item2 item3"
+    "item4 item5 item6";
+    gap: 20px;
+    background-color: #e6d891;
+}
+.footer-wrapper {
+    height: 20vw;
+}
+.products-1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    padding: 5%;
+    padding-bottom: 10vh;
+}
+.products-1-img {
+    width: 70%;
+
+    aspect-ratio: auto;
+}
+.product-text-box-1 {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: row;
+    justify-content:space-evenly; 
+    align-items: center;
+    height: auto;
+    padding-top: 10px;
+
+}
+.products img {
+    height: 100%;
+    width: 100%;
+}
+.footer-wrapper {
+    background-color: #9bcc71;
+    display: flex;
+    flex-direction: row;
+}
+.footer-socials {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin: 20px;
+}
+.footer-socials div {
+    display: flex;
+    align-items: center;
+}
+button {
+    background: transparent;
     position: relative;
-    top: -55vh;
-    left: 10vw;
+    padding: 5px 15px;
+    display: flex;
+    align-items: center;
+    font-size: 17px;
+    font-weight: 600;
+    text-decoration: none;
+    cursor: pointer;
+    border: 1px solid rgb(255,0,0);
+    border-radius: 25px;
+    outline: none;
+    overflow: hidden;
+    color: rgb(255,0,0);
+    transition: color 0.3s 0.1s ease-out;
+    text-align: center;
+  }
+  
+  button span {
+    margin: 10px;
+  }
+  
+  button::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    content: '';
+    border-radius: 50%;
+    display: block;
+    width: 20em;
+    height: 20em;
+    left: -5em;
+    text-align: center;
+    transition: box-shadow 0.5s ease-out;
+    z-index: -1;
+  }
+  
+  button:hover {
+    color: #fff;
+    border: 1px solid rgb(255,0,0);
+  }
+  
+  button:hover::before {
+    box-shadow: inset 0 0 0 10em rgb(255, 0, 0);
+  }
+/*  */
+/* .products {
+    width: ;
+} */
+/* .navbar-products {}
+.navbar-FAQ {} */
+
+@media (max-width: 700px) {
+  .banner-info {
+    visibility: none;
+  }
+  .banner-phone {
+    visibility: none;
+  }
+  .banner-email {
+    visibility: none;
+  }
+  .hero-text {
+    position: static;
+    justify-self: center;
     width: 80vw;
     z-index: 1;
     font-size: 24px;
+  }
 }
-.navbar-products {}
-.navbar-FAQ {}
