--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,5 @@
-* {
-  /* border: solid red 2px; */
-}
+
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Outfit:wght@100..900&family=Space+Grotesk:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&family=Young+Serif&display=swap');
 body {
   margin: 0px;
   padding: 0px;
@@ -9,9 +8,10 @@ body {
 .banner-wrapper {
   width: 100%;
   max-height: 20vh;
+  font-family: "work sans", sans-serif, 'Times New Roman', Times, serif;
 }
 .banner-box {
-  background: linear-gradient(to right, #B6D0E6, #9CC6EF) ;
+  background: linear-gradient(to right, #b6d0e6, #9cc6ef);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -30,7 +30,7 @@ body {
   height: 20vh;
   width: 19vw;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 .banner-svg svg {
@@ -39,11 +39,14 @@ body {
 .banner-name {
   height: 10vh;
   font-size: 1em;
+  text-align: center;
+  text-justify: center;
+  padding-top: 2.5vh;
 }
 .banner-search-bar {
   display: flex;
   justify-content: center;
-  align-items: center;
+  text-align: center;
   width: 50%;
 }
 
@@ -135,21 +138,23 @@ section div video {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: auto;
 }
 .products-box {
-  padding-top: 10vh;
+  /* padding-top: 10vh; */
   display: grid;
   width: 90vw;
-    padding-right: 3%;
+  /* padding-right: 3%; */
   grid-template-columns: repeat(auto-fit, 33%);
-  grid-template-rows: repeat(auto-fit, auto);
+  grid-template-rows: repeat(1, auto);
   grid-template-areas:
-    "item1 item2 item3"
-    "item4 item5 item6";
+    "item1 item2 item3";
   gap: 20px;
- 
+  height: auto;
 }
-
+h2 {
+  display: inline-block;
+}
 .products-1 {
   display: flex;
   justify-content: center;
@@ -159,70 +164,83 @@ section div video {
   background-color: #e6d891;
   border-radius: 10px;
   transition: transform 0.2s;
-
 }
 
-  .products-2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 5%;
-    background-color: #e6d891;
-    border-radius: 10px;
-    transition: transform 0.2s;
-  }
- 
-  .products-3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 5%;
-    background-color: #e6d891;
-    border-radius: 10px;
-    transition: transform 0.2s;
+.products-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5%;
+  background-color: #e6d891;
+  border-radius: 10px;
+  transition: transform 0.2s;
+}
 
-  }
-  .products-4 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 5%;
-    background-color: #e6d891;
-    border-radius: 10px;
-    transition: transform 0.2s;
-
-  }
-  .products-5 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 5%;
-    background-color: #e6d891;
-    border-radius: 10px;
-    transition: transform 0.2s;
-
-  }
-  .products-6 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 5%;
-    background-color: #e6d891;
-    border-radius: 10px;
-    transition: transform 0.2s;
-
-  }
-  .products-1:hover { transform: scale(1.05); }
-  .products-2:hover { transform: scale(1.05); }
-  .products-3:hover { transform: scale(1.05); }
-  .products-4:hover { transform: scale(1.05); }
-  .products-5:hover { transform: scale(1.05); }
-  .products-6:hover { transform: scale(1.05); }
+.products-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5%;
+  background-color: #e6d891;
+  border-radius: 10px;
+  transition: transform 0.2s;
+}
+.products-4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5%;
+  background-color: #e6d891;
+  border-radius: 10px;
+  transition: transform 0.2s;
+}
+.products-5 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5%;
+  background-color: #e6d891;
+  border-radius: 10px;
+  transition: transform 0.2s;
+}
+.products-6 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5%;
+  background-color: #e6d891;
+  border-radius: 10px;
+  transition: transform 0.2s;
+}
+.products-1:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.products-2:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.products-3:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.products-4:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.products-5:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.products-6:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
 .products-1-img {
   width: 70%;
 
@@ -242,15 +260,20 @@ section div video {
   height: 100%;
   width: 100%;
 }
+.products > a {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 .footer-wrapper {
-    margin-top: 10px;
-  background-color: #39652C;
+  margin-top: 10px;
+  background-color: #39652c;
   display: flex;
   flex-direction: row;
 }
 .footer-wrapper {
-    height: 20vw;
-  }
+  height: 20vw;
+}
 .footer-socials {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -263,46 +286,68 @@ section div video {
   align-items: center;
 }
 .footer-contact {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction:column ;
-    width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  width: 40%;
 }
 .footer-complaint {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
-@media(width >=760px) {
-    .footer-wrapper{
-        height: 15vh;
-    }
+
+@media (width <= 700px) {
+.banner-wrapper {
+  width: 100%;
+  max-height: 20vh;
+}
+.banner-box {
+  display: flex;
+  justify-content: space-around;
+}
+.footer-complaint {
+  display: none;
+}
+.footer-wrapper {
 
 }
-/*  */
-/* .products {
-    width: ;
-} */
-/* .navbar-products {}
-.navbar-FAQ {} */
 
-@media (max-width: 700px) {
-  .banner-info {
-    visibility: none;
-  }
-  .banner-phone {
-    visibility: none;
-  }
-  .banner-email {
-    visibility: none;
-  }
+.banner-name {
+
+}
+.banner-search-bar {
+  display: none;
+}
+
+.banner-search-bar input {
+
+}
+.banner-info {
+
+}
+.banner-phone {
+
+}
+.banner-info div p {
+
+}
+.banner-email {
+
+}
   .hero-text {
-    position: static;
-    justify-self: center;
-    width: 80vw;
-    z-index: 1;
-    font-size: 24px;
+
+  }
+  .footer-wrapper {
+    height: 20vh;
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
   }
 }
+
