--- a/style-product-2.css
+++ b/style-product-2.css
@@ -1,349 +1,19 @@
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
-}
-
-.video-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  overflow: hidden;
-}
-.video-container video {
-  width: 100%;
-}
-
-.header-wrapper {
-  display: flex;
-  width: 100%;
-  height: 12vh;
-  background-color: #6b934f;
-  position: fixed;
-  color: white;
-  top: 0;
-  z-index: 1;
-}
-label:hover {
-  cursor: pointer;
-}
-.social-1 {
-  gap: 20px;
-}
-.header-logo {
-  flex: 1;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.header-logo p {
-  padding-left: 2vw;
-}
-.logo {
-  height: 8vh;
-}
-
-.header-navbar {
-  flex: 1;
-}
-.header-login {
-  flex: 1;
-}
-.header-navbar {
-  flex: 1;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.header-navbar-mobile {
-  display: none;
-  flex: 0;
-}
-
-.header-navbar-mobile a {
-  text-decoration: none;
-  color: white;
-  position: relative;
-}
-.header-navbar a {
-  text-decoration: none;
-  color: white;
-  position: relative;
-}
-.header-navbar a::after {
-  content: "";
-  position: absolute;
-  bottom: -4px;
-  left: 0;
-  height: 2px;
-  width: 100%;
-  background-color: white;
-  transform: scaleX(0);
-  transition: transform 0.25s ease-in-out;
-  transform-origin: bottom center;
-}
-.header-navbar a:hover::after {
-  transform: scaleX(1);
-}
-
-.header-login {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.header-login p {
-  cursor: pointer;
-  padding-right: 3vw;
-}
-
-.products {
-  display: flex;
-  box-sizing: border-box;
-  justify-content: center;
-  margin-top: 12vh;
-  align-items: center;
-  background-color: #fef9f6;
-  width: 100%;
-  /* height: 100vh; */
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-}
-.back-button {
-  position: fixed;
-  top: 15vh;
-  left: 3vw;
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-}
-
-.products-box {
-  border: 0.5px solid #707070;
-  width: 80%;
-  /* height: 70vh; */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.inner-product-box {
-  height: 100%;
-  margin-top: 5vh;
-
-  display: flex;
-  flex-direction: row;
-}
-.text-product {
-  width: 49%;
-  height: 80%;
-  margin-right: 4%;
-  display: flex;
-  font-size: 1rem;
-}
-.divider2 {
-  background-color: #707070;
-  height: 1px;
-  width: 90%;
-  content: "";
-}
-.stock-box {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-.divider3 {
-  background-color: #707070;
-  height: 1px;
-  width: 5%;
-  display: block;
-  transform: rotate(90deg);
-  border: 0px;
-  margin: 0;
-  margin-top: 1.5%;
-}
-.stock-box svg:hover {
-  cursor: pointer;
-}
-.product-svg-1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 90%;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-.product-svg-1 div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 30%;
-  margin-top: 10px;
-}
-.product {
-  background-color: #ffffff;
-  width: 60%;
-  height: 60%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: column;
-}
-.carousel-wrapper {
-  display: flex;
-  height: 60vh;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.carousel-item {
-  height: 400px;
-  width: 100%;
-  background-color: white;
-  margin: 20px;
-}
-.inner-carousel {
-  display: flex;
-  width: 300%;
-  transition: transform 0.5s ease-in-out;
-}
-.carousel-wrapper:has(.buttons #first:checked) .inner-carousel {
-  transform: translatex(33%);
-}
-
-.carousel-wrapper:has(.buttons #second:checked) .inner-carousel {
-  transform: translatex(0%);
-}
-
-.carousel-wrapper:has(.buttons #third:checked) .inner-carousel {
-  transform: translatex(-33%);
-}
-
-input {
-  display: none;
-}
-
 label {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  margin: 2px;
-  border-radius: 10px;
-  background-color: white;
-  transition: background 0.2s ease-in-out;
+  font-size: 0.8em;
+  text-align: center;
+  text-justify: center;
+  border: solid 1px #707070;
+  margin: 10px;
+  padding: 5px;
+  border-radius: 50%;
 }
 
 input[id="first"]:checked + label {
-  background-color: black;
+  background-color: lightgray;
 }
 input[id="second"]:checked + label {
-  background-color: black;
+  background-color: lightgray;
 }
 input[id="third"]:checked + label {
-  background-color: black;
-}
-.product img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.buttons {
-  display: flex;
-  justify-content: center;
-  margin: 20px;
-}
-.product-text-1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-
-  width: 90%;
-}
-/* .product-text-1 div { */
-/* width: 50%;
-  } */
-footer {
-  background-color: #ffffff;
-  height: 240px;
-  display: flex;
-  flex-direction: row;
-  flex-direction: row-reverse;
-  justify-content: center;
-  gap: 10%;
-}
-.footer-socials {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.footer-location {
-  flex: 1;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  flex-direction: column;
-}
-.footer-location-logo {
-  display: flex;
-  flex-direction: column;
-}
-.footer-location-logo p {
-  margin: 5px;
-  padding: 0;
-}
-.footer-location-logo img {
-  padding-right: 30px;
-}
-.divider {
-  width: 1px;
-  background-color: black;
-  height: 90%;
-  margin-top: 15px;
-}
-.footer-socials div {
-  display: flex;
-}
-
-@media (max-width: 768px) {
-  .video-container {
-    top: 10vh;
-    height: 30vh;
-  }
-  .empty-container {
-    height: 30vh;
-  }
-  .products {
-    flex-wrap: wrap;
-  }
-
-  .products-box {
-    flex-direction: column;
-  }
-  .header-navbar {
-    display: none;
-  }
-
-  .footer-socials {
-    margin-top: 3vh;
-  }
-  footer {
-    background-color: #ffffff;
-    height: 480px;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10%;
-  }
-  .divider {
-    transform: rotate(90deg);
-  }
+  background-color: lightgray;
 }
