--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  overflow-x: hidden;
+
 }
 
 .video-container {
@@ -52,7 +54,7 @@ body {
 .header-login {
   flex: 1;
 }
-.header-login p{
+.header-login p {
   text-align: center;
 }
 .header-navbar {
@@ -103,9 +105,16 @@ body {
   padding-right: 3vw;
 }
 
-.empty-container {
-  height: 100vh;
-  width: 100%;
+.hero-container {
+  display: flex;
+      height: 100vh;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      color: wheat;
+      font-size: 2.7em;
+      padding: 60px;
+      text-shadow: 5px 5px 10px #3e3e3e;
 }
 .products {
   display: flex;
@@ -139,7 +148,7 @@ body {
     flex: 1;
     margin: 80px;
  
-    /* margin:151.25px; */
+    box-shadow: 5px 6px 6px #0000000F;
     transform: scale(1);
     transition: transform 0.25s ease-out;
     display: flex;
@@ -169,9 +178,40 @@ body {
  
   width: 90%;
 }
-/* .product-text-1 div { */
-  /* width: 50%;
-} */
+#heart {
+  display: none;
+
+}
+#heart + label svg {
+  fill: #CFCFCF;
+  transition: fill 0.2s ease-in-out;
+}
+#heart:checked + label svg{
+  fill: red;
+}
+#heart2 {
+  display: none;
+
+}
+#heart2 + label svg {
+  fill: #CFCFCF;
+  transition: fill 0.2s ease-in-out;
+}
+#heart2:checked + label svg{
+  fill: red;
+}
+#heart3 {
+  display: none;
+
+}
+#heart3 + label svg {
+  fill: #CFCFCF;
+  transition: fill 0.2s ease-in-out;
+}
+#heart3:checked + label svg{
+  fill: red;
+}
+
 footer {
   background-color: #FFFFFF;
   height: 240px;
