--- a/style-product.css
+++ b/style-product.css
@@ -123,7 +123,13 @@ label:hover {
   height: 50px;
   width: 50px;
 }
+svg:hover   {
+  cursor: pointer;
+}
+img:hover {
+  cursor: pointer;
 
+}
 .products-box {
   border: 0.5px solid #707070;
   width: 80%;
@@ -132,6 +138,7 @@ label:hover {
   justify-content: space-between;
   align-items: center;
   box-shadow: 5px 5px 20px #0000000F;
+  padding-bottom: 2vh;
 }
 .inner-product-box {
   height: 100%;
