--- a/style.css
+++ b/style.css
@@ -7,7 +7,13 @@ body {
   overflow-x: hidden;
 
 }
+svg:hover   {
+  cursor: pointer;
+}
+img:hover {
+  cursor: pointer;
 
+}
 .video-container {
   position: fixed;
   top: 0;
